--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 all:
+	[[ -s ~/.bashrc ]] && source ~/.bashrc
 	java -jar /usr/local/lib/antlr-4.1-complete.jar *.g4 -no-listener
-	javac Cubex*.java
+	javac *.java
 
 test:
 	java -jar Lexer.jar simple_test1.in > tokens1.out
