--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/apple/Documents/eclipseWorkspace/compilersPS2/CompilersPS22/lib/antlr-4.1-complete.jar"/>
+	<classpathentry kind="lib" path="/Users/Yannie/Google Drive/WorkSpace/Cubex/CompilersPS2/lib/antlr-4.1-complete.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
